# ChangeLog for dev-util/byacc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/byacc/ChangeLog,v 1.72 2013/06/02 08:44:33 ago Exp $

  02 Jun 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for sh, wrt bug #470482

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for alpha, wrt bug #470482

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for sparc, wrt bug #470482

  24 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for ppc64, wrt bug #470482

  22 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for ia64, wrt bug #470482

  21 May 2013; Jeroen Roovers <jer@gentoo.org> byacc-20130304.ebuild:
  Stable for HPPA (bug #470482).

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for s390, wrt bug #470482

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for arm, wrt bug #470482

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for ppc, wrt bug #470482

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for x86, wrt bug #470482

  19 May 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
  Stable for amd64, wrt bug #470482

*byacc-20130304 (05 Mar 2013)

  05 Mar 2013; Tim Harder <radhermit@gentoo.org> +byacc-20130304.ebuild:
  Version bump.

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20121003.ebuild:
  Stable for sh, wrt bug #451636

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20121003.ebuild:
  Stable for s390, wrt bug #451636

  22 Jan 2013; Jeroen Roovers <jer@gentoo.org> byacc-20121003.ebuild:
  Stable for HPPA (bug #451636).

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20121003.ebuild:
  Stable for x86, wrt bug #451636

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20121003.ebuild: