@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/byacc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/byacc/ChangeLog,v 1.72 2013/06/02 08:44:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/byacc/ChangeLog,v 1.73 2013/09/26 01:57:31 radhermit Exp $
+
+*byacc-20130925 (26 Sep 2013)
+
+  26 Sep 2013; Tim Harder <radhermit@gentoo.org> +byacc-20130925.ebuild:
+  Version bump.
 
   02 Jun 2013; Agostino Sarubbo <ago@gentoo.org> byacc-20130304.ebuild:
   Stable for sh, wrt bug #470482
